style: home mobile view done

--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -1,11 +1,13 @@
-<section class="">
-    <div class="">
-        <h1 class="font-display">CONNECT & COLLAB</h1>
-        <p>I'm always open to new opportunities and connections. Whether you have a project you'd 
-            like to discuss, want to share your work, or just say hi — please don't hesitate to reach out.
-        </p>
-        <button>
-            <a class="" href="mailto: timyvillarmia@gmail.com">say hello</a>
+<section class="container mx-auto py-60 text-center">
+    <div>
+        <div class="mb-10">
+            <h1 class="font-display text-5xl">CONNECT & COLLAB</h1>
+            <p>I'm always open to new opportunities and connections. Whether you have a project you'd 
+                like to discuss, want to share your work, or just say hi — please don't hesitate to reach out.
+            </p>
+        </div>
+        <button class="rounded-lg border-[1px] border-off-white py-4 px-8">
+            <a class="no-underline" href="mailto: timyvillarmia@gmail.com">say hello</a>
         </button>
     </div>
 </section>
