--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,11 @@
-<div>
-    <ul>
-        <li>linkedin</li>
-        <li>facebook</li>
-        <li>github</li>
-        <li>emal</li>
-    </ul>
-    <p>©2024 timy villarmia</p>
+<div class="container mx-auto">
+    <div class="flex flex-col justify-center items-center gap-y-6 py-8 uppercase border-off-white border-t-[1px] border-opacity-10">
+        <ul class="flex gap-x-4 ">
+            <li>linkedin</li>
+            <li>facebook</li>
+            <li>github</li>
+            <li>email</li>
+        </ul>
+        <p>©2024 timy villarmia</p>
+    </div>
 </div>
