--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,13 +23,13 @@ import '../styles/main.css'
 		<title>{title}</title>
 		</ViewTransitions>
 	</head>
-	<body>
+	<body class="text-sm">
 		<header class="container mx-auto">
 			<Nav/>
 		</header>
 		<slot/>
 		<CTA/>
-		<Footer/>
+		<Footer class="container mx-auto"/>
 	</body>
 </html>
 <style is:global>
