--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,4 +1,4 @@
-<nav class="flex justify-between border-b-[1px] border-opacity-10 py-5">
+<nav class="flex justify-between border-off-white border-b-[1px] border-opacity-10 py-5">
     <a href="/" class="font-bold no-underline">Timy Villarmia</a>
     <div class="hidden">
         <a href="/">Home</a>
