--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ const projects = await getCollection("projects");
 
 <Layout title="Timy Villarmia">
 	<main  class="text-sm">
-		<section class="container mx-auto py-20">
+		<section class="container mx-auto py-28">
 			<div>
 				<h1 class="text-xl font-medium">Hey there!, I’m Timy, a computer science student - who enjoys the <span class="font-display">challenge of solving complex problems </span>
 					& <span class="font-display">building stuffs with code.</span>
@@ -32,7 +32,7 @@ const projects = await getCollection("projects");
 					</div>
 				</div>
 			</div>
-			<div class="flex justify-center pt-10">
+			<div class="flex justify-center pt-20">
 				<Image 
 				src={Indicator}
 				alt="scroll down"
@@ -73,16 +73,16 @@ const projects = await getCollection("projects");
 				{projects.map((project) => <Card project={project} />)}
 			</div>
 		</section>
-		<section>
+		<section class="container mx-auto py-20 bg-dark-gray">
 			<div>
-				<p>Playground</p>
+				<p class="font-bold uppercase mb-2">Playground</p>
 				<p>
 					A collection of my half-finished projects, 
 					random ideas, experiments that are fun, & 
 					sometimes just a little bit weird.
 				</p>
 			</div>
-			<div>
+			<div class="py-10 flex flex-col gap-y-4">
 				{playground.map((project) => <PlaygroundCard project={project} />)}
 			</div>
 
