--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,6 @@
 <nav class="flex justify-between border-off-white border-b-[1px] border-opacity-10 py-5">
     <a href="/" class="font-bold no-underline">Timy Villarmia</a>
-    <div class="hidden">
+    <div class="hidden uppercase">
         <a href="/">Home</a>
         <a href="/info">Info</a>
     </div>
