--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -17,7 +17,7 @@ import {Image} from 'astro:assets';
     </div>
     <div class="py-4">
         <div class="">
-            <p class="font-bold">{project.data.title}</p>
+            <p class="font-bold text-xl">{project.data.title}</p>
             <div class="my-4">
                 {project.data.badges.map((tag) => (
                     <span class="text-xs font-light mr-2 px-3 py-1.5 rounded-full border-[.5px] border-off-white">{tag}</span>
