--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,11 +4,16 @@ interface Props {
 }
 
 const { title } = Astro.props;
+import { getCollection, getEntry } from 'astro:content';
 import { ViewTransitions } from 'astro:transitions';
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
 import CTA from '../components/CTA.astro';
-import '../styles/main.css'
+import '../styles/main.css';
+
+
+const profile = await getEntry('data', 'profile');
+
 
 ---
 
@@ -21,15 +26,15 @@ import '../styles/main.css'
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		</ViewTransitions>
+		<ViewTransitions/>
 	</head>
-	<body class="text-sm">
+	<body class="text-base">
 		<header class="container mx-auto">
 			<Nav/>
 		</header>
 		<slot/>
 		<CTA/>
-		<Footer class="container mx-auto"/>
+		<Footer socials={profile}/>
 	</body>
 </html>
 <style is:global>
