--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,15 @@ import Profile from '../../public/images/profile.webp';
 import {getCollection, getEntry} from "astro:content";
 import Card from "../components/ProjectCard.astro";
 import PlaygroundCard from "../components/PlaygroundCard.astro";
-import playground from "../data/playground.json";
 
 const projects = await getCollection("projects");
+const profile = await getEntry('data', 'profile');
+const playground = await getEntry('data', 'playground');
+
 ---
 
 <Layout title="Timy Villarmia">
-	<main  class="text-sm">
+	<main>
 		<section class="container mx-auto py-28">
 			<div>
 				<h1 class="text-xl font-medium">Hey there!, I’m Timy, a computer science student - who enjoys the <span class="font-display">challenge of solving complex problems </span>
@@ -48,9 +50,15 @@ const projects = await getCollection("projects");
 					I'm a Filipino computer science student passionate about building innovative and user-centric software solutions. From front-end to back-end, I strive to create impactful and seamless digital experiences.
 				</p>
 				<p class="mb-8">
-					Find me elsewhere on the web: <a href="https://www.linkedin.com/in/timyvillarmia/" target="_blank">LinkedIn</a>, <a href="https://github.com/TimyVillarmia" target="_blank">Github</a>, <a href="https://www.facebook.com/VillarmiaTimy" target="_blank">Facebook</a> or e-mail me at <a href="hello@timyvillarmia.com">hello@timyvillarmia.com</a>.
+					Find me elsewhere on the web: <a href="https://www.linkedin.com/in/timyvillarmia/" target="_blank">LinkedIn</a>, <a href="https://github.com/TimyVillarmia" target="_blank">Github</a>, <a href="https://www.facebook.com/VillarmiaTimy" target="_blank">Facebook</a> or e-mail me at <a href="mailto:hello@timyvillarmia.com">hello@timyvillarmia.com</a>.
 				</p>
-				<a href="" class="flex items-center no-underline font-bold gap-x-1.5">About Me<span><Icon name="mdi:arrow-right-thin"/></span></a>
+				<button class="rounded-lg border-[1px] border-off-white py-2 px-4">
+					<a href="/info" class="flex items-center no-underline gap-x-1.5">
+						About Me
+						<span><Icon name="mdi:arrow-right-thin" class="text-2xl"/></span>
+					</a>
+				</button>
+
 			</div>
 			<div>
 				<Image 
@@ -63,18 +71,18 @@ const projects = await getCollection("projects");
 			</div>
 		</section>
 		<section class="container mx-auto py-20">
-			<div>
+			<div class="mb-20">
 				<p class="font-bold uppercase mb-2">featured work</p>
 				<p>
 					a curated selection of my standout projects, showcasing my skills and creativity over the past few years. Each project represents a unique journey and a testament to my growth as a developer.
 				</p>
 			</div>
-			<div class="py-10">
+			<div>
 				{projects.map((project) => <Card project={project} />)}
 			</div>
 		</section>
 		<section class="container mx-auto py-20 bg-dark-gray">
-			<div>
+			<div class="mb-20">
 				<p class="font-bold uppercase mb-2">Playground</p>
 				<p>
 					A collection of my half-finished projects, 
@@ -82,10 +90,13 @@ const projects = await getCollection("projects");
 					sometimes just a little bit weird.
 				</p>
 			</div>
-			<div class="py-10 flex flex-col gap-y-4">
-				{playground.map((project) => <PlaygroundCard project={project} />)}
+			<div class="flex flex-col gap-y-4">
+				{playground.data.map((project) => <PlaygroundCard project={project} />)}
 			</div>
-
 		</section>
+		<div>
+		</div>
 	</main>
 </Layout>
+
+
