style: sm home responsive

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const profile = await getEntry('data', 'profile');
 		<title>{title}</title>
 		<ViewTransitions/>
 	</head>
-	<body class="text-base">
+	<body class="text-base sm:text-xl">
 		<header class="container mx-auto">
 			<Nav/>
 		</header>
