style: md breakpoint done

--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -1,7 +1,7 @@
 <section class="container mx-auto py-60 text-center">
     <div>
         <div class="mb-10">
-            <h1 class="font-display text-5xl">CONNECT & COLLAB</h1>
+            <h1 class="font-display text-5xl md:text-7xl">CONNECT & COLLAB</h1>
             <p>I'm always open to new opportunities and connections. Whether you have a project you'd 
                 like to discuss, want to share your work, or just say hi — please don't hesitate to reach out.
             </p>
