--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -9,51 +9,57 @@ const profile = await getEntry('data', 'profile');
 
 <Layout title="Info - Timy Villarmia">
     <main>
-        <section  class="container mx-auto py-28">
-            <div class="text-balance text-center">
-                <h1 class="text-5xl uppercase font-bold mb-2 md:text-8xl">info</h1>
-                <p>Who is Timy Villarmia? Explore the journey, skills, and aspirations in the field of computer science.</p>
-            </div>
-            <div>
-                <Image 
-				src={Profile}
-				alt="Profile"
-				class={"h-auto w-auto rounded-lg mt-20"}
-				loading="lazy"
-				decoding="async"
-				/>
+        <section class="py-28 text-center text-balance">
+            <div class="container mx-auto">
+                <div>
+                    <h1 class="text-6xl uppercase font-bold mb-2 sm:text-9xl">info</h1>
+                    <p class="">Who is Timy Villarmia? Explore the journey, skills, 
+                        and aspirations in the field of computer science.</p>
+                </div>
+                <div>
+                    <Image 
+                    src={Profile}
+                    alt="Profile"
+                    class={"h-auto w-auto rounded-lg mt-20"}
+                    loading="lazy"
+                    decoding="async"
+                    />
+                </div>
             </div>
         </section>
 
-        <section class="container mx-auto py-20">
-            <div>
-                <h1 class="text-4xl font-bold uppercase mb-6 md:text-5xl">about me</h1>
-                <p class="font-medium text-pretty mb-12">I’m Timy — a third-year computer science student. 
-                    I care a lot about using code for positive impact. 
-                    Currently based in Cebu City, Philippines.</p>
+        <section class="py-20">
+            <div class="container mx-auto flex flex-col gap-y-12 lg:flex-row lg:gap-x-2">
+                <div class="lg:basis-1/2">
+                    <h1 class="text-4xl font-bold uppercase mb-6 md:text-5xl">about me</h1>
+                    <p class="font-medium text-balance">I’m Timy — a third-year computer science student. 
+                        I care a lot about using code for positive impact. 
+                        Currently based in Cebu City, Philippines.</p>
+                </div>
+                <div class="lg:basis-1/2">
+                    <p class="whitespace-pre-line">I was born and raised in Cebu, PH., the first in my family to attend college, raised by my hardworking single mother who worked as a maid. I got hooked on computers early on and loved playing video games and turned me into a "techie-kid" of the family early on.
+                        
+                        In my teenage years, curiosity led me to self-taught photo and video editing, taking on design projects for friends and schools. 
+                        
+                        Today, I’m a 3rd-year computer science student at Asian College of Technology. While I primarily focus on the Full-Stack Development, I have a great interest in Artificial Intelligence and Game-Development. I proudly serve as a technical director for the non-profit organization "Ngiti”.
+                        
+                        Outside of coding, you'll often find me casually playing games, consuming tech contents on YouTube, and and constantly exploring new technologies and enrolling to various courses, especially in artificial intelligence and game development.
+                        
+                        I’m open to internships, and part-time positions in the Full-Stack Development field.
+                    </p>
+                </div>
             </div>
-            <div>
-                <p class="whitespace-pre-line">I was born and raised in Cebu, PH., the first in my family to attend college, raised by my hardworking single mother who worked as a maid. I got hooked on computers early on and loved playing video games and turned me into a "techie-kid" of the family early on.
-                    
-                    In my teenage years, curiosity led me to self-taught photo and video editing, taking on design projects for friends and schools. 
-                    
-                    Today, I’m a 3rd-year computer science student at Asian College of Technology. While I primarily focus on the Full-Stack Development, I have a great interest in Artificial Intelligence and Game-Development. I proudly serve as a technical director for the non-profit organization "Ngiti”.
-                    
-                    Outside of coding, you'll often find me casually playing games, consuming tech contents on YouTube, and and constantly exploring new technologies and enrolling to various courses, especially in artificial intelligence and game development.
-                    
-                    I’m open to internships, and part-time positions in the Full-Stack Development field.
-                </p>
-            </div>
+
         </section>
 
         <section class="container mx-auto py-20 flex flex-col gap-y-10">
-            <div class="bg-dark-gray rounded-[40px] py-6 px-6">
-                <div>
-                    <h1 class="text-4xl font-bold whitespace-pre-line mb-4 md:text-5xl">CAREER 
+            <div class="bg-dark-gray rounded-[40px] py-10 px-10">
+                <div class="flex flex-col gap-y-4 lg:flex-row">
+                    <h1 class="text-4xl font-medium whitespace-pre-line md:text-5xl lg:basis-1/2">CAREER 
                         + EDUCATION
                     </h1>
-                    <div class="divide-off-white/25 divide-y-[1px] divide-solid">
-                        <div class="py-6 flex flex-col space-y-6">
+                    <div class="divide-off-white/25 divide-y-[1px] divide-solid lg:basis-1/2">
+                        <div class="pb-6 flex flex-col space-y-6">
                             {profile.data["experience"].map((experience)=> 
                             <div>
                                 <p class="text-xs">{experience.date}</p>
@@ -74,13 +80,13 @@ const profile = await getEntry('data', 'profile');
                     </div>
                 </div>
             </div>
-            <div class="bg-dark-gray rounded-[40px] py-6 px-6">
-                <div>
-                    <h1 class="text-3xl font-bold whitespace-pre-line mb-4 md:text-5xl">SKILLS
+            <div class="bg-dark-gray rounded-[40px] py-10 px-10">
+                <div class="flex flex-col gap-y-4 lg:flex-row">
+                    <h1 class="text-3xl font-medium whitespace-pre-line md:text-5xl lg:basis-1/2">SKILLS
                         + CERTIFICATIONS
                     </h1>
-                    <div class="divide-off-white/25 divide-y-[1px] divide-solid">
-                        <div class="py-6">
+                    <div class="divide-off-white/25 divide-y-[1px] divide-solid lg:basis-1/2">
+                        <div class="pb-6">
                             <p class="mb-4">Here are some technologies I have been working with:</p>
                             <div class="columns-2">
                                 {profile.data["technologies"].map((technologies)=> 
