--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -1,5 +1,5 @@
-<section class="container mx-auto py-60 text-center">
-    <div>
+<section class="py-60 text-center text-balance">
+    <div class="container mx-auto">
         <div class="mb-10">
             <h1 class="font-display text-5xl md:text-7xl">CONNECT & COLLAB</h1>
             <p>I'm always open to new opportunities and connections. Whether you have a project you'd 
